[project]
name = "csv_product_matcher"
version = "0.1.0"
description = "This is a simple Python script that compares two CSV files — Missing.csv and Scanned.csv — and generates a new file Matching.csv containing the rows from Missing.csv where the productCode exists in Scanned.csv."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'pandas',
    'ipykernel',
]